[tool.poetry]
name = "telegram-bot-api"
version = "0.1.0"
description = ""
authors = ["Artem Vasilyev <artem.v.vasilyev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
pydantic = "^1.8.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
